# steppecu

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_m0.sh  handoff-18b7801.md  handoff-1fbb417.md  handoff-ba37d95.md  install.sh  pyproject.toml
bindings/: CMakeLists.txt  bind_dates.cpp  bind_f2handle.cpp  bind_fstats.cpp  bind_qpadm.cpp  bind_qpgraph.cpp  module.cpp
bindings/internal/: bind_common.hpp
bindings/steppe/: __init__.py  _cache.py  _rds.py
docs/examples/: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/steppe/: admixture.hpp  config.hpp  dates.hpp  dstat.hpp  error.hpp  extract.hpp  f3.hpp  f4.hpp  f4ratio.hpp  fst.hpp  fstat_sweep.hpp  fstats.hpp  kinship.hpp  pca.hpp  pcangsd.hpp  qpadm.hpp  qpfstats.hpp  qpgraph.hpp  qpgraph_search.hpp  readv2.hpp  sfs.hpp
src/access/: CMakeLists.txt
src/app/: CMakeLists.txt  cli_parse.cpp  cli_parse.hpp  cmd_admixture.cpp  cmd_admixture.hpp  cmd_cache.cpp  cmd_cache.hpp  cmd_common.hpp  cmd_dates.cpp  cmd_dates.hpp  cmd_emit.hpp  cmd_extract_f2.cpp  cmd_extract_f2.hpp  cmd_f3.cpp  cmd_f3.hpp  cmd_f4.cpp  cmd_f4.hpp  cmd_f4ratio.cpp  cmd_f4ratio.hpp  cmd_fst.cpp  cmd_fst.hpp  cmd_fstat_sweep.cpp  cmd_fstat_sweep.hpp  cmd_ibd.cpp  cmd_ibd.hpp  cmd_ingest.cpp  cmd_ingest.hpp  cmd_ingest_concord.cpp  cmd_ingest_concord.hpp  cmd_kinship.cpp  cmd_kinship.hpp  cmd_paint.cpp  cmd_paint.hpp  cmd_pca.cpp  cmd_pca.hpp  cmd_pcangsd.cpp  cmd_pcangsd.hpp  cmd_qpadm.cpp  cmd_qpadm.hpp  cmd_qpdstat.cpp  (+41 more)
src/core/: CMakeLists.txt
src/device/: CMakeLists.txt  backend.hpp  backend_factory.hpp  decode_budget.hpp  device_decode_result.hpp  device_f2_blocks.hpp  device_partial.hpp  f2_blocks_out.hpp  f2_disk_format.hpp  host_ram.cpp  likelihood_tensor.hpp  p2p_combine.hpp  readv2_bitmatrix.hpp  resources.cpp  resources.hpp  shard_plan.cpp  shard_plan.hpp  stream_f2_blocks.hpp  tier_select.hpp  vcf_gpu_ingest.hpp  vram_budget.hpp  wave_budget.hpp
src/extract/: CMakeLists.txt
src/io/: CMakeLists.txt  allele_reconcile.hpp  beagle_reader.cpp  beagle_reader.hpp  bgen_reader.cpp  bgen_reader.hpp  bgzf_index.hpp  consumer_raw_reader.cpp  consumer_raw_reader.hpp  eigenstrat_format.cpp  eigenstrat_format.hpp  faidx_reader.cpp  faidx_reader.hpp  geno_reader.cpp  geno_reader.hpp  genotype_source.cpp  genotype_source.hpp  genotype_tile.hpp  gl_normalize.hpp  gzip_line_reader.cpp  gzip_line_reader.hpp  ind_reader.cpp  ind_reader.hpp  individual_partition.cpp  individual_partition.hpp  likelihood_tensor_writer.cpp  likelihood_tensor_writer.hpp  likelihood_tile.hpp  panel_merge_writer.cpp  panel_merge_writer.hpp  plink_reader.cpp  plink_reader.hpp  ploidy_detect.cpp  ploidy_detect.hpp  snp_major_tile.hpp  snp_reader.cpp  snp_reader.hpp  target_build.cpp  target_build.hpp  target_sites.cpp  (+7 more)
tests/: CMakeLists.txt
tests/bench/: README.md  bench_common.py  bench_fst.py  bench_pca.py  inject_missing.py  run_bench.py
tests/cli/: test_cli_ancestrymap_prefix.cpp  test_cli_cache.cpp  test_cli_dates.cpp  test_cli_dstat_geno.cpp  test_cli_eigenstrat_prefix.cpp  test_cli_extract_qpadm.cpp  test_cli_f3.cpp  test_cli_f4.cpp  test_cli_f4ratio.cpp  test_cli_fst.cpp  test_cli_fst_all_pairs.cpp  test_cli_ibd.cpp  test_cli_ingest.cpp  test_cli_ingest_concord.cpp  test_cli_ingest_likelihoods.cpp  test_cli_io_fault.cpp  test_cli_pa_prefix.cpp  test_cli_paint.cpp  test_cli_pca.cpp  test_cli_pcangsd.cpp  test_cli_plink_prefix.cpp  test_cli_qpadm.cpp  test_cli_qpdstat.cpp  test_cli_qpfstats.cpp  test_cli_qpgraph.cpp  test_cli_qpwave.cpp  test_cli_readv2.cpp  test_cli_readv2_concord.cpp  test_cli_roh.cpp  test_cli_rotate.cpp  test_cli_sfs.cpp
tests/concordance/: localanc_concordance.py
tests/python/: conftest.py  test_cache.py  test_py_convert_rds.py  test_py_dates.py  test_py_dstat_geno.py  test_py_extract_f2.py  test_py_f3.py  test_py_f4.py  test_py_f4ratio.py  test_py_qpadm.py  test_py_qpdstat.py  test_py_qpfstats.py  test_py_qpgraph.py
tests/r/: verify_export_rds.R
tests/reference/: bench_f2_multigpu.cu  bench_fstats_1240k.cu  bench_optimizers.cu  bench_rotation_1240k.cu  fst_windowed_allel_gate.py  pca_allel_gate.py  test_ancestrymap_decode_equivalence.cu  test_backend_capabilities_probe.cu  test_cuda_check.cu  test_dates_parity.cu  test_decode_equivalence.cu  test_device_buffer.cu  test_device_fault_status.cu  test_eigenstrat_decode_equivalence.cu  test_emu_honorability.cu  test_extract_f2_regimeB_parity.cu  test_f2_blocks_equivalence.cu  test_f2_blocks_gather.cu  test_f2_blocks_group.cu  test_f2_determinism.cu  test_f2_empty_guard.cu  test_f2_equivalence.cu  test_f2_int_max_guard.cu  test_f2_multigpu_gate.cu  test_f2_multigpu_parity.cu  test_filter_oracle.cu  test_fstat_sweep_parity.cu  test_handles.cu  test_li_stephens_coancestry.cu  test_li_stephens_localanc.cu  test_li_stephens_parity.cu  test_pa_decode_equivalence.cu  test_pca_eig.cu  test_pca_truncated_eig.cu  test_plink_decode_equivalence.cu  test_qpadm_domain.cu  test_qpadm_missing_block.cu  test_qpadm_parity.cu  test_qpadm_rotation.cu  test_qpfstats_fused_parity.cu  (+8 more)
tests/unit/: beagle_reader_test.cpp  bgen_reader_test.cpp  pcangsd_em_test.cpp  test_ancibd_model.cpp  test_backend_capabilities.cpp  test_backend_factory.cpp  test_block_partition.cpp  test_block_ranges.cpp  test_config.cpp  test_config_builder.cpp  test_decode.cpp  test_f2.cpp  test_f2_blocks_multigpu.cpp  test_f2_combine.cpp  test_f2_from_blocks.cpp  test_f2_partials_validate.cpp  test_faidx_reader.cpp  test_filters.cpp  test_fst_all_pairs.cpp  test_fst_wc.cpp  test_fst_windows.cpp  test_geno_reader.cpp  test_gl_normalize.cpp  test_king_classify.cpp  test_launch_config.cpp  test_li_stephens_validate.cpp  test_model_search_core.cpp  test_panel_merge_writer.cpp  test_pca_standardize.cpp  test_readv2_classify.cpp  test_result_emit.cpp  test_roh_model.cpp  test_roh_segments.cpp  test_sfs_hist.cpp  test_shard_plan.cpp  test_snp_reader.cpp  test_target_build.cpp  test_validate_device_order.cpp  test_vcf_build_detect.cpp  test_vcf_gl_parse.cpp  (+1 more)
(+1248 files in other folders)
