# pyproject.toml — the steppe GPU-only Python wheel (M(py-1); cli-bindings.md §6.3).
#
# ONE GPU wheel, NO CPU-only variant (memory cpu-is-test-only): steppe is a GPU product.
# scikit-build-core drives CMake with the bindings on (STEPPE_BUILD_PYTHON=ON) and the CLI
# off; nanobind provides the extension machinery.
#
# THE CUDA-13 RUNTIME IS A REQUIREMENT, NOT BUNDLED, NOT A PIP DEP (the GPU-wheel decision).
# `_core.so` carries DT_NEEDED for libcudart.so.13 / libcublas.so.13 / libcusolver.so.12 /
# libcufft.so.12 (cuFFT is the DATES ancestry-covariance LD engine) and resolves them all
# DYNAMICALLY AT LOAD from the user's CUDA 13 install (the system loader /
# LD_LIBRARY_PATH=/usr/local/cuda/lib64) — the toolkit (~GBs) is deliberately NOT bundled,
# and the user's driver must match the CUDA 13 runtime anyway. The pip `nvidia-*-cu13`
# redistributable wheels are NOT declared as deps: as of this build they are NOT published on
# PyPI with a real (>=13) version (only 0.0.x placeholders exist), so pinning them makes the
# wheel pip-uninstallable. When the cu13 redistributable wheels ship a real version, an
# OPTIONAL `cuda` extra (below) can pull them for a self-contained install; the BASE wheel
# documents CUDA 13 as a system requirement. pandas is a SOFT/lazy dep (imported inside the
# .to_dataframe accessors), NOT a hard wheel dep, so `import steppe` works without it.
[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2"]
build-backend = "scikit_build_core.build"

[project]
name = "steppe"
# VERSION — single-sourced from the top-level CMakeLists.txt project(VERSION x.y.z ...) (the
# SOLE authority) via scikit-build-core's regex metadata provider (see
# [tool.scikit-build.metadata.version] below). There is deliberately NO static literal here:
# the wheel version, the CLI `steppe --version` (STEPPE_VERSION = ${PROJECT_VERSION}), and
# steppe.__version__ all derive from project(VERSION), so they cannot drift (D2).
dynamic = ["version"]
# RUNTIME FLOOR: CUDA 13 (a CUDA-13 runtime + matching NVIDIA driver, resolved at load — see
# the header note above). steppe is a GPU product; `import steppe` works without a GPU, but any
# GPU call requires a CUDA-13 device. The prebuilt wheel targets Blackwell sm_120.
description = "GPU/CUDA-13 qpAdm / qpWave (f-statistics & model fitting)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
# numpy is the ONLY hard runtime dep (_core's `_f2_numpy` returns an ndarray). The CUDA 13
# runtime is a SYSTEM requirement resolved at load (see the header note) — NOT a pip dep, so
# `pip install steppe` succeeds and `import steppe` works wherever CUDA 13 is on the loader
# path; a GPU call raises a clear "no CUDA device" fault on a box without one.
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]   # the DataFrame accessors; soft/lazy (import steppe works without).
# The optional AT2 <-> steppe f2 `.rds` converter READ path (steppe.import_f2_rds) — pyreadr
# reads AT2's per-pair matrices. IMPORT-ONLY: steppe.export_f2_rds writes AT2 `.rds` with the
# hand-rolled stdlib serializer (bindings/steppe/_rds.py) and needs NO extra dependency.
rds = ["pyreadr>=0.5"]
# pytest-timeout backs the [tool.pytest.ini_options] per-test timeout below; when it is absent
# pytest just ignores the `timeout` key (a benign config warning), so the gate is unaffected.
test = ["pytest>=7", "pytest-timeout>=2", "pandas>=1.5", "numpy>=1.22"]
# Host-only lint/type toolchain for the pure-Python facade + tests (ruff + mypy). Provisioned
# as an EXTRA (not a base dep): the future CUDA-free CI lane runs `ruff check` / `mypy
# bindings/steppe`; absent here it is a no-op (nothing imports these at runtime).
lint = ["ruff>=0.4", "mypy>=1.8"]
# OPTIONAL self-contained CUDA-13 runtime via the pip redistributable wheels (`pip install
# steppe[cuda]`). Declared as an EXTRA, not a base dep, because these wheels are not yet on
# PyPI with a real >=13 version; when they are, this extra installs libcudart/libcublas/
# libcusolver into site-packages/nvidia/*/lib (the user then puts those on LD_LIBRARY_PATH,
# or a future auditwheel-repair injects an $ORIGIN/../nvidia/*/lib RPATH). The set mirrors
# `_core.so`'s DT_NEEDED: cudart + cublas + cusolver + cufft (cuFFT drives DATES).
cuda = [
    "nvidia-cuda-runtime-cu13>=13,<14",
    "nvidia-cublas-cu13>=13,<14",
    "nvidia-cusolver-cu13>=13,<14",
    "nvidia-cufft-cu13>=13,<14",
]

[project.scripts]
# `steppe-rds` — the GPU-free f2 `.rds` converter CLI (bindings/steppe/_rds.py::main). A DISTINCT
# name from the compiled `steppe` C++ binary (a `steppe` console-script would collide with it on
# PATH). Export needs no dependency; import needs the [rds] extra (pyreadr). scikit-build-core
# emits this as a standard console entry point in the wheel's metadata.
steppe-rds = "steppe._rds:main"
# `steppe-cache` — the GPU-free f2-cache manager CLI (bindings/steppe/_cache.py::main): list /
# inspect / verify STPF2BK1 caches. Same GPU-free console-script pattern as steppe-rds.
steppe-cache = "steppe._cache:main"

[tool.scikit-build]
# Build the bindings AND bundle the `steppe` CLI (steppe_app) into the wheel's scripts dir, so
# `pip install steppe` delivers the full command-line tool (all subcommands, incl. scan / the
# f4/f3 sweeps that have no Python binding) plus the importable `steppe` package.
cmake.version = ">=3.28"
# RELEASE is mandatory (memory perf-bench-release-build): scikit-build-core does NOT pass a
# build type by default, and a Debug/unspecified build voids the precision/perf contract.
cmake.build-type = "Release"
cmake.args = [
    "-DSTEPPE_BUILD_PYTHON=ON",
    "-DSTEPPE_BUILD_CLI=ON",
    "-DSTEPPE_BUILD_TESTS=OFF",
    # CUDA-13 arch: scikit-build-core does NOT pass STEPPE_CUDA_ARCH, so the build would
    # otherwise fall to the CUDAArch.cmake default. Pin the Blackwell box arch (sm_120; the
    # 2x RTX 5090 box5090 / the RTX PRO 6000 rtxbox). Override with a different matrix via
    # `pip wheel . --config-settings=cmake.define.STEPPE_CUDA_ARCH=<arch>` for another GPU.
    "-DSTEPPE_CUDA_ARCH=120",
]
build.targets = ["_core", "steppe_app"]
wheel.packages = ["bindings/steppe"]
# STABLE ABI: pair with nanobind_add_module(STABLE_ABI) so the extension links the limited API
# and ONE wheel is tagged `cp312-abi3` — installable on Python 3.12, 3.13, 3.14+ (forward-compat,
# no per-version rebuild). Built with cp312; the tag floor is 3.12 (nanobind's stable-ABI floor).
wheel.py-api = "cp312"
build-dir = "build/{wheel_tag}"

# DYNAMIC VERSION (the [project] dynamic = ["version"] above): read the wheel version straight
# out of the top-level CMakeLists.txt project(VERSION x.y.z ...) at build time, so CMake is the
# SINGLE version source and the wheel can never drift from the C++/CMake project version (D2).
# The regex is project-anchored + 3-part so it captures `0.1.0`, NOT the 2-part
# cmake_minimum_required(VERSION 3.28); the `value` named group is the scikit-build-core contract.
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'project\([^)]*?VERSION\s+(?P<value>\d+\.\d+\.\d+)'

# ---------------------------------------------------------------------------------------------
# Pure-Python facade: pytest / ruff / mypy config. NONE of this reaches the compiled extension
# or the goldens — it tunes only the host-side lint/test surface (bindings/steppe + tests/python).
# scikit-build-core reads only [build-system]/[project]/[tool.scikit-build], so these tables are
# inert to the wheel build; only pytest reads [tool.pytest.ini_options].
# ---------------------------------------------------------------------------------------------

[tool.pytest.ini_options]
# Bare `pytest` discovers the facade gate; the CTest `py_qpadm` wiring passes an explicit path
# (tests/CMakeLists.txt) so testpaths is a convenience for a repo-root run, not a behavior change.
testpaths = ["tests/python"]
# Register the `gpu` marker so a future `@pytest.mark.gpu` resolves with no PytestUnknownMarkWarning
# (every reference test SKIPs cleanly when no CUDA device is visible — cli-bindings.md §7).
markers = ["gpu: requires a CUDA device"]
# `-ra` adds an extra summary for non-passing tests (skips/errors); additive to the CTest `-v`.
addopts = "-ra"
# Per-test guard (seconds) via pytest-timeout; absent the plugin pytest ignores it (benign warning).
timeout = 600

[tool.ruff]
target-version = "py39"
# Measured from the longest existing source line (99 chars across the facade + tests/python) so the
# rule set lints clean WITHOUT mass-reformatting the frozen-shape facade (per the A3 plan: bump
# line-length over a churn rewrite). The result structs deliberately mirror AT2 $weights/$rankdrop.
line-length = 100

[tool.ruff.lint]
# Curated, permissive starter set: pycodestyle (E), pyflakes (F), import-order (I), pyupgrade (UP),
# bugbear (B). Deliberately NOT the strict bandit/blind-except families that would churn the tests.
select = ["E", "F", "I", "UP", "B"]
# Keep Optional[...] over PEP-604 `X | None`: requires-python is >=3.9, where an EVALUATED `str |
# None` (e.g. via typing.get_type_hints on the public facade) is a TypeError, and rewriting the
# frozen-shape facade is exactly the churn the A3 plan says to avoid (bump config, not a rewrite).
ignore = ["UP045"]

[tool.ruff.lint.per-file-ignores]
# tests/python starts permissive (the A3 plan: "start permissive; per-file-ignores over a churn
# rewrite") so the existing test layout is untouched: S101 = bare `assert`; I001 = their import
# grouping; F841 = the intentional `pd`-availability binds in the pandas-accessor tests; UP031 =
# the conftest %-format meta.json writer (literal JSON braces make an f-string a brace-doubling
# churn). The inline `# noqa: BLE001` / `# noqa: WPS433` markers stay authoritative.
"tests/python/**" = ["S101", "I001", "F841", "UP031"]
# The quickstart mirrors conftest's meta.json %-writer (literal JSON braces = f-string churn).
"docs/examples/python/**" = ["UP031"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
# disallow_untyped_defs stays OFF: the facade is partially annotated; turning it on would be an
# annotation project, not the XS lint-config A3 scopes.

[[tool.mypy.overrides]]
# The compiled nanobind extension ships no type stub; excuse just that one import.
module = "steppe._core"
ignore_missing_imports = true
